--- a/V1/css/news.css
+++ b/V1/css/news.css
@@ -161,7 +161,7 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
 	object-fit:cover;
 	width:100%;
 	height:100%;
-	display:black;
+	display:block;
 	margin:20px 0;
 }
 .team_pub_top{
@@ -197,4 +197,13 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
         font-size: .24rem;
         line-height: .36rem;
     }
+	.news_top_content{
+		width:100%;
+	}
+	.news_top_content p span{
+		font-size: .24rem !important;
+		line-height: .36rem;
+		font-weight: 400;
+		color: #333;
+	}
 }
