--- a/V1/css/reset.css
+++ b/V1/css/reset.css
@@ -701,7 +701,7 @@ color: #fff;
     display: block;
     width: 275px;
     height: 158px;
-    background-size: cover;
+    background-size: 78%;
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
