--- a/V1/css/right.css
+++ b/V1/css/right.css
@@ -171,7 +171,7 @@
     display: block;
     width: 275px;
     height: 158px;
-    background-size: cover;
+    background-size: 54%;
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
