--- a/V1/css/events.css
+++ b/V1/css/events.css
@@ -415,8 +415,10 @@
 }
 .imgauto{
     object-fit: cover;
-    width: 100%;
-    height: 100%;
+    width: 60%;
+	display:block;
+	margin:0 auto;
+    height: 60%;
 }
 .white{
     color: #333;
