--- a/V1/css/team.css
+++ b/V1/css/team.css
@@ -68,9 +68,12 @@
         padding-left: .2rem;
     }
     .esports .game_team_list_detail li{
-        margin-right: .4rem;
+        /* margin-right: .4rem; */
     }
     .esports .game_team_list_detail li:nth-child(5n){
         margin-right: .4rem;
     }
+	.game_team_list_detail{
+		justify-content: space-around;
+	}
 }
