--- a/V1/css/playerdetail.css
+++ b/V1/css/playerdetail.css
@@ -405,6 +405,27 @@
     font-size: 18px;
     color: #666;
     line-height: 26px;
+	overflow-y: scroll;
+    height: 202px;
+    width: 100%
+}
+ /*滚动条整体样式*/
+ .player_team_word::-webkit-scrollbar {
+    width: 4px;
+    height: 1px;
+}
+/*滚动条滑块*/
+.player_team_word::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    -webkit-event_detail_content-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+    background: #ccc;
+    height: 168px;
+}
+/*滚动条轨道*/
+.player_team_word::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,0);
+    border-radius: 4px;
+    background: rgba(0,0,0,0);
 }
 .player_xs li{
     float: left;
