--- a/V1/css/events.css
+++ b/V1/css/events.css
@@ -462,6 +462,18 @@
 .events_ul .imgauto{
 	
 }
+.hot_match_bot li a{
+	position:relative;
+}
+.hot_match_bot .imgauto1{
+	display:block;
+	position:absolute;
+	left:0;
+	top:0;
+	right:0;
+	bottom:0;
+	margin:auto;
+}
 /* 移动 */
 @media only screen and (max-width: 1024px){
     .events{
