--- a/V1/css/playerdetail.css
+++ b/V1/css/playerdetail.css
@@ -47,7 +47,7 @@
     margin-bottom: 32px;
 }
 .team_explain_top .name{
-    max-width: 150px;
+    /* max-width: 150px; */
     overflow:hidden;
     text-overflow:ellipsis;
     white-space: nowrap;
@@ -393,7 +393,7 @@
 .player_team_bot .name{
     font-size: 20px;
     color: #999;
-    max-width: 300px;
+    /* max-width: 300px; */
     overflow:hidden;
     text-overflow:ellipsis;
     white-space: nowrap
@@ -591,5 +591,22 @@
     }
     .team_explain_name p:nth-child(1){
         margin-right: .3rem;
+    }
+    /* 5.21新增 */
+    .player_team_word p{
+        font-size: .24rem;
+        line-height: .32rem;
+    }
+    .player_team_bot .name{
+        font-size:.3rem;
+		margin-bottom:.2rem;
+    }
+    .team_explain_top .classify{
+        width:1.7rem;
+		height:.5rem;
+		line-height:.5rem;
+		font-size:.28rem;
+		border-radius:.25rem;
+		margin-bottom:.2rem;
     }
 }
