--- a/V1/fonts/iconfont.css
+++ b/V1/fonts/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2536818 */
-  src: url('iconfont.woff2?t=1620574039609') format('woff2'),
-       url('iconfont.woff?t=1620574039609') format('woff'),
-       url('iconfont.ttf?t=1620574039609') format('truetype');
+  src: url('iconfont.woff2?t=1622017010552') format('woff2'),
+       url('iconfont.woff?t=1622017010552') format('woff'),
+       url('iconfont.ttf?t=1622017010552') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-dianzan:before {
+  content: "\e60c";
 }
 
 .icon-xiayige:before {
