--- a/V1/css/events.css
+++ b/V1/css/events.css
@@ -121,6 +121,10 @@
     width: 128px;
     height: 128px;
 }
+.team_logo_img img{
+    display: block;
+    margin: 0 auto;
+}
 .team_explain{
     width: 864px;
     padding-top: 50px;
