--- a/V1/css/playerdetail.css
+++ b/V1/css/playerdetail.css
@@ -81,7 +81,7 @@
     color: #333;
 }
 .English_name,.chinese_name{
-    max-width: 150px;
+    /* max-width: 150px; */
     overflow:hidden;
     text-overflow:ellipsis;
     white-space: nowrap;
