--- a/V1/css/news.css
+++ b/V1/css/news.css
@@ -179,6 +179,17 @@ box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
     height: 24px;
     line-height: 24px;
 }
+/* 2021.6.2新增 */
+.news_top_content *{
+    font-size: 18px !important;
+    color: #333!important;
+    margin-bottom: 20px;
+    text-indent: 2em;
+}
+.news_top_content p br{
+    display: none;
+}
+/* 2021.6.2新增 */
 /* 新闻详情页 */
 @media only screen and (max-width: 1024px){
     .game_left{
