--- a/V1/css/teamdetail.css
+++ b/V1/css/teamdetail.css
@@ -10,7 +10,7 @@
     width:100%;
     min-height: 300px;
     background: #fff;
-    border: 1px solid #eee;
+    /* border: 1px solid #eee; */
     border-radius: 8px;
     padding-left: 100px;
     padding-right: 30px;
@@ -545,6 +545,7 @@ li a .max_span span{
     position: relative;
     min-height: 300px;
     background-color: #fff;
+    border: 1px solid #eee;
 }
 .team_title{
     background-color: rgba(0,0,0,0);
