--- a/V1/css/dota2.css
+++ b/V1/css/dota2.css
@@ -697,4 +697,40 @@
     color: #333;
     width: 100%;
 }
+.vs_data2 {
+    width: 740px;
+    height: 38px;
+    margin: 0 auto 50px;
+}
+.vs_data2 li {
+    width: 20%;
+    border-bottom: 1px solid #eee;
+    border-top: 1px solid #eee;
+    border-right: 1px solid #eee;
+    border-left: 1px solid #fff;
+    text-align: center;
+    float: left;
+    line-height: 36px;
+}
+.vs_data2 li:nth-child(1) {
+    border-left: 1px solid #eee;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+.vs_data2 li a {
+    font-size: 18px;
+    color: #666;
+}
+.vs_data2 li.active {
+    border-bottom: 1px solid #FA8E69;
+    border-top: 1px solid #FA8E69;
+    border-right: 1px solid #FA8E69;
+    border-left: 1px solid #FA8E69;
+    background: #FFF9F7;
+    color: #FA8E69;
+}
+.vs_data2 li:nth-last-child(1) {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
 /* 比赛详情 */
